--- a/templates/base.html
+++ b/templates/base.html
@@ -3,21 +3,50 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>{% block title %}Electronics store{% endblock %}</title>
+    <title>{% block title %}Electronics Store{% endblock %}</title>
     <link href="{% static "css/base.css" %}" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        #header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+        }
+        .logo {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
+            font-size: 1.5em;
+        }
+        #subheader {
+            background-color: #f9f9f9;
+            padding: 10px 20px;
+        }
+        .cart {
+            font-weight: bold;
+            color: #555;
+        }
+        #content {
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-<div id="header">
-    <a href="/static" class="logo">Electronics store</a>
-</div>
-<div id="subheader">
-    <div class="cart">
-        Your cart is empty.
+    <div id="header">
+        <a href="/" class="logo">Electronics Store</a>
     </div>
-</div>
-<div id="content">
-    {% block content %}
-    {% endblock %}
-</div>
+    <div id="subheader">
+        <div class="cart">
+            Your cart is empty.
+        </div>
+    </div>
+    <div id="content">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
