--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 /* Styles for the header */
 #header {
-    background-color: #1a1a1a;
+    background-color: #3b065e;
     color: #fff;
     padding: 20px 0;
     text-align: center;
