--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,12 @@
             padding: 0;
         }
         #header {
-            background-color: #333;
-            color: #fff;
+            background-color: #3b065e;
+            color: #905cc0;
             padding: 10px 20px;
         }
         .logo {
-            text-decoration: none;
+            text-decoration: #8a8a0f;
             color: #fff;
             font-weight: bold;
             font-size: 1.5em;
@@ -27,8 +27,8 @@
             padding: 10px 20px;
         }
         .cart {
-            font-weight: bold;
-            color: #555;
+            font-weight: unset;
+            color: #17329d;
         }
         #content {
             padding: 20px;
@@ -38,11 +38,6 @@
 <body>
     <div id="header">
         <a href="/" class="logo">Electronics Store</a>
-    </div>
-    <div id="subheader">
-        <div class="cart">
-            Your cart is empty.
-        </div>
     </div>
     <div id="content">
         {% block content %}
