--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -13,7 +13,7 @@
                 <th>Image</th>
                 <th>Product</th>
                 <th>Amount</th>
-                <th>Remove</th>
+                <th>      </th>
                 <th>Unit Price</th>
                 <th>Price</th>
             </tr>
@@ -42,7 +42,6 @@
         </tbody>
     </table>
     <p class="text-right">
-        <a href="{% url "shop:product_list" %}" class="button light">Continue Shopping</a>
-        <a href="#" class="button">Checkout</a>
+        <a href="{% url "shop:product_list" %}" class="button light">Return to the catalog</a>
     </p>
 {% endblock %}
