--- a/templates/shop/detail.html
+++ b/templates/shop/detail.html
@@ -65,7 +65,7 @@
         }
         .category-link {
             text-decoration: none;
-            color: #2980b9;
+            color: #17329d;
         }
     </style>
 {% endblock %}
