--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #93c0e0;
         }
         #header {
             background-color: #3b065e;
@@ -38,6 +39,10 @@
 <body>
     <div id="header">
         <a href="/" class="logo">Electronics Store</a>
+    </div>
+    <div id="subheader">
+        <a href="/cart" class="cart">Your Cart</a>
+    </div>
     </div>
     <div id="content">
         {% block content %}
