--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -42,6 +42,10 @@
         </tbody>
     </table>
     <p class="text-right">
+        <a href="{% url "cart:cart_detail" %}" class="button light">Place an order</a>
+    </p>
+    <p class="text-right">
         <a href="{% url "shop:product_list" %}" class="button light">Return to the catalog</a>
     </p>
 {% endblock %}
+
