--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
     <div class="container-fluid">
           {% if user.is_authenticated %}
               <a class="navbar-brand" href="{% url 'shop:product_list' %}">{{ user.username }}</a>
+              <a class="navbar-brand" href="{% url 'logout' %}">Logout</a>
           {% else %}
               <a class="navbar-brand" href="{% url 'login' %}">Login</a>
               <a class="navbar-brand" href="{% url 'django_registration_register' %}">Registration</a>
